--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Console Accueil</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body class="home-body">
 <div class="home-page">
@@ -24,7 +24,7 @@
             <p>(Bientôt) Générer des affiches à partir des genres.</p>
         </a>
 
-        <a class="home-card home-card--disabled" href="#">
+        <a class="home-card" href="test_ivt.html">
             <h2>Test<br>Image ==> Thèmes</h2>
             <p>Uploader une image et voir les genres prédits.</p>
         </a>
