modif index.html

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
             <p>Préparer les données, booster les classes rares, entraîner le modèle.</p>
         </a>
 
-       <a class="home-card" href="/clip_demo/">
+       <a class="home-card home-card--disabled" href="/clip_demo/">
             <h2>Entraînement<br>Thèmes ==> Image</h2>
             <p>(Bientôt) Générer des affiches à partir des genres.</p>
         </a>
@@ -29,7 +29,7 @@
             <p>Uploader une image et voir les genres prédits.</p>
         </a>
 
-        <a class="home-card home-card--disabled" href="#">
+        <a class="home-card" href="/clip_demo/">
             <h2>Test<br>Thèmes ==> Image</h2>
             <p>Explorer ou filtrer des images par thèmes.</p>
         </a>
