modif ma partie

--- a/web/test_ivt.html
+++ b/web/test_ivt.html
@@ -105,7 +105,7 @@
                     <label for="seuil-principal">Seuil principal</label>
                     <input id="seuil-principal" type="number" value="0.50" min="0" max="1" step="0.05">
                 </div>
-                <div class="field">
+                <div class="field is-hidden">
                     <label for="seuil-secondaire">Seuil secondaire</label>
                     <input id="seuil-secondaire" type="number" value="0.30" min="0" max="1" step="0.05">
                 </div>
@@ -154,7 +154,7 @@
         <div class="metrics" id="summary-current-image">
             <p><strong>Image :</strong> <span id="current-image-name">–</span></p>
             <p><strong>Genres principaux :</strong> <span id="genres-principaux">–</span></p>
-            <p><strong>Genres secondaires :</strong> <span id="genres-secondaires">–</span></p>
+            <p class="is-hidden"><strong>Genres secondaires :</strong> <span id="genres-secondaires">–</span></p>
         </div>
 
         <div class="table-wrapper">
